<resources>
    <string name="app_name">My Application</string>
    <string name="edtPhone">Phone Number</string>
    <string name="edtPassword">Password</string>
    <string name="edtName">Name</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnRegister">Register</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="rdbSeller">Seller</string>
    <string name="rdbCustomer">Customer</string>
    <string name="title_activity_home_customer">home_customer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Open">My Application</string>
    <string name="Close">My Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_userhome">userhome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
