<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:weightSum="4"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto" >
    <RelativeLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        >
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/edtPhone"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/edtPassword"
            android:inputType="textPassword"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:weightSum="2"
           android:orientation="horizontal">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_weight="1"
               >

               <info.hoang8f.widget.FButton
                   android:id="@+id/btnSignIn"
                   android:layout_width="120dp"
                   android:layout_height="50dp"
                   android:layout_centerHorizontal="true"
                   android:layout_centerVertical="true"
                   android:text="@string/btnSignIn"
                   android:textColor="#ffffff"
                   app:buttonColor="@color/fbutton_color_alizarin" />
           </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <info.hoang8f.widget.FButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:text="@string/btnSignUp"
                    android:textColor="#ffffff"
                   />

            </RelativeLayout>


       </LinearLayout>

    </LinearLayout>

</LinearLayout>